[Diagnostics] SR-2242: Fix diagnostic when argument label is omitted